[package]
name = "hpn"
version = "0.8.0"
authors = ["Tim Hammerquist"]
homepage = "https://github.com/penryu/hpn"
repository = "https://github.com/penryu/hpn"
keywords = ["calculator", "hp", "hpnc", "rpn"]
edition = "2021"
license = "MIT"
readme = "README.md"
description = """
Text-based RPN-style calculator in the HP Voyager tradition.
"""

include = ["src/", "LICENSE.txt", "README.md"]

[lib]
name = "hpn"
path = "src/lib.rs"

[[bin]]
name = "hpnc"
path = "src/main.rs"

[dependencies]
bigdecimal = "0.3.0"
getrandom = { version = "~0.2", features = ["js"] }
rand = "0.8.4"

[dev-dependencies]
regex = "1.10"
