[package]
name = "hpnc"
version = "0.1.2"
edition = "2021"
authors = ["Tim Hammerquist"]
homepage = "https://github.com/penryu/hpn"
repository = "https://github.com/penryu/hpn"
keywords = ["calculator", "rpn", "hp", "client"]
license = "MIT"
description = """
Binary wrapping the hpn RPN calculator library
"""

[dependencies]
hpn = { version = "0.6", path = ".." }
